Fix full hero bg image on mobile

--- a/src/modules/pg/hero/hero.css
+++ b/src/modules/pg/hero/hero.css
@@ -50,7 +50,7 @@ section {
 }
 
 @media only screen and (max-width: 800px) {
-  section {
+  section:not(.full) {
     background-position: 0 2rem;
   }
 
